RESOLVED FIXED111322
[Qt] REGRESSION(r141240) Crash in PluginPackage::fetchInfo
https://bugs.webkit.org/show_bug.cgi?id=111322
Summary [Qt] REGRESSION(r141240) Crash in PluginPackage::fetchInfo
Allan Sandfeld Jensen
Reported 2013-03-04 07:14:52 PST
Some pages causes a crash in QLibrary::load() called from PluginPackage::fetchInfo(). It seem to be caused by trying to load incompatible plugins that should have been skipped by the blacklist.
Attachments
Patch (1.34 KB, patch)
2013-03-04 07:16 PST, Allan Sandfeld Jensen
hausmann: review+
Allan Sandfeld Jensen
Comment 1 2013-03-04 07:16:39 PST
Allan Sandfeld Jensen
Comment 2 2013-03-04 07:55:43 PST
David Faure
Comment 3 2013-03-08 06:06:31 PST
Ah, good catch, thanks. Sorry for the regression.
Note You need to log in before you can comment on or make changes to this bug.