[Qt] REGRESSION(r141240) Crash in PluginPackage::fetchInfo https://bugs.webkit.org/show_bug.cgi?id=111322

Reviewed by Simon Hausmann.

Do not try to load blacklisted plugins.

* plugins/qt/PluginPackageQt.cpp:
(WebCore::PluginPackage::fetchInfo):

git-svn-id: svn://svn.chromium.org/blink/trunk@144627 bbb929c8-8fbe-4397-9dbb-9b2b20218538